# signing

./: .yamllint  Containerfile  pyproject.toml  tox.ini
.github/workflows/: test.yaml
.tekton/: signing-a6e74-pull-request.yaml  signing-a6e74-push.yaml
pipelines/: README.md
scripts/: pip-audit-parse.py  pip-audit.sh
signing/: main.py
tasks/: README.md
tests/unit/: test_main.py
